# kwami-mem

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/longmemeval/: README.md  evaluate.py  run_benchmark.py
benchmarks/memorybench/: README.md  evaluate.py  run_benchmark.py
src/kwami_mem/: __init__.py  client.py  config.py  models.py
src/kwami_mem/embedding/: __init__.py  base.py  gemini.py  local.py  rerank.py  sparse.py
src/kwami_mem/memory/: __init__.py  episodic.py  semantic.py  working.py
src/kwami_mem/processing/: __init__.py  chunker.py  extractor.py
src/kwami_mem/retrieval/: __init__.py  query.py  reranker.py  retriever.py
src/kwami_mem/storage/: __init__.py  base.py  qdrant.py
src/kwami_mem/utils/: __init__.py  hashing.py
tests/: __init__.py  conftest.py  test_client.py  test_embedding.py  test_memory.py  test_processing.py  test_retrieval.py  test_storage.py
