[project]
name = "kwami-mem"
version = "0.1.0"
description = "Long-term memory management for LLMs — multimodal embedding & intelligent retrieval powered by Gemini and Qdrant"
readme = "README.md"
license = "MIT"
authors = [
    { name = "quantium-rock", email = "alexcollsoutumuro@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["llm", "memory", "rag", "embedding", "qdrant", "gemini", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "google-genai>=1.0.0",
    "qdrant-client>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastembed>=0.8.0",
    "sentence-transformers>=5.4.0",
    "openai>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/kwami-io/kwami-mem"
Repository = "https://github.com/kwami-io/kwami-mem"
Documentation = "https://github.com/kwami-io/kwami-mem#readme"

[dependency-groups]
dev = [
    "datasets>=4.8.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
